--- a/Assingmnet.html
+++ b/Assingmnet.html
@@ -10,7 +10,7 @@
     table{border:5px solid black ;border-collapse: collapse;}
     th ,td{padding: 10px;}
 </style>
-<table>
+<table><b>
 <tr bgcolor="aqua">
     <th>Day and Time</th>
     <th>9am-10am</th>
@@ -102,6 +102,7 @@
     <td style="text-align: center;" colspan="5"bgcolor="#FFCCCB">6PM-10PM Ai & Chatbot</td>
     <td bgcolor="#FFFFEO">      </td>
 </tr>
+</b>
 </table>
 </body>
 </html>
